# L1-AGENT-WALLET

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  claude.json  enclave-signer-gen-live-psbt  plugin.json  recovery_withdrawal.psbt  requirements.txt  sovereign_batch_mint.py  sovereign_e2e_nervous_system.py  sovereign_lifecycle_audit.py
agent-gateway/: agent_server.py  go-bot.sh  smart_router.py  sovereign_onboarding.py  telegram_bot.py  test_smart_router.py  test_tools.py
docs/: CLAUDE_CONFIG.md  INSTALL.md
enclave-signer/: Cargo.toml  scratch_hex.rs
enclave-signer/src/: hd_wallet.rs  lib.rs  main.rs  policy.rs  runes_forge.rs  signer.rs  simplicity_engine.rs
mcp-bridge/: bridge.py  intelligence_server.py  launch_server.sh  server.py
scripts/: setup_m2.sh  sign_mandate.py  sovereign_batch_mint.py  sovereign_withdrawal.py
skills/bitcoin-governance/: SKILL.md
skills/bitcoin-transactions/: SKILL.md
skills/bitcoin-wallet/: SKILL.md
skills/runes-minting/: SKILL.md
tests/: test_cameleon_audit.py  verify_cameleon.py
wallet-bridge/: server.py
