[package]
name = "enclave-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29.0", features = ["recovery", "global-context", "rand-std", "hashes"] }
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
rand = "0.8"
bitcoin_hashes = "0.14"
simplicity = "0.1"
# bitcoin 0.32.x — must match ordinals' bitcoin dependency exactly to avoid
# duplicate type definitions across the crate graph.
bitcoin = { version = "0.32.0", features = ["base64", "rand", "serde", "secp-recovery"] }
base64 = "0.21.0"
log = "0.4"
env_logger = "0.11"
# Runes protocol — Casey Rodarmor's reference implementation.
# 0.0.14 targets bitcoin ^0.32, aligning with our existing bitcoin = "0.32.0".
# If `cargo build` reports a bitcoin version conflict, run:
#   cargo update -p bitcoin --precise 0.32.5
ordinals = "0.0.14"
ureq = { version = "2.9", features = ["json"] }
dotenvy = "0.15.7"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
